--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,58 +1,41 @@
-version: 2.1
-
-orbs:
-  ruby: circleci/ruby@1.1.2
-  node: circleci/node@2
-
-# setup
-commands:
-  setup:
-    steps:
-      - checkout
-      - ruby/install-deps
-      - node/install-packages:
-          pkg-manager: yarn
-          cache-key: "yarn.lock"
-
+version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/ruby:2.7-node
+    machine:
+      image: circleci/classic:edge
+    working_directory: ~/repo
     steps:
-      - setup
-  test:
-    docker:
-      - image: circleci/ruby:2.7-node
-      - image: circleci/postgres:11.6-alpine
-        name: "db"
-        environment:
-          POSTGRES_USER: postgres
-          POSTGRES_DB: myapp_test
-          POSTGRES_PASSWORD: ""
-    environment:
-      BUNDLE_JOBS: "4"
-      BUNDLE_RETRY: "3"
-      PGHOST: 127.0.0.1
-      PGUSER: postgres
-      PGPASSWORD: ""
-      RAILS_ENV: test
-    steps:
-      - setup
+      - checkout
       - run:
-          name: rails db:migrate
-          command: bundle exec rails db:migrate
+          name: Install Docker Compose
+          command: |
+            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
+            chmod +x ~/docker-compose
+            sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
-          name: Database setup
-          command: bundle exec rails db:schema:load --trace
+          name: docker-compose up
+          command: |
+            set -x
+            docker-compose up --build -d
       - run:
-          name: Rspec
-          command: bundle exec rspec
-
-workflows:
-  version: 2
-  test_and_deploy:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
+          name: docker-compose stop
+          command: |
+            set -x
+            docker-compose stop
+      - run:
+          name: docker-compose up
+          command: |
+            set -x
+            docker-compose up -d
+      - run:
+          name: test
+          command: |
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob 'spec/**/*_spec.rb' | circleci tests split --split-by=timings)"
+            docker-compose exec rails_api bin/rspec --format progress \
+                                                                  --format RspecJunitFormatter \
+                                                                  --out /tmp/test-results/rspec.xml \
+                                                                  $TEST_FILES
+      - run:
+          name: docker-compose down
+          command: docker-compose down
